<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_24dp"
            android:title="@string/map"/>
        <item
            android:id="@+id/nav_buses"
            android:icon="@drawable/ic_bus_24dp"
            android:title="@string/buses"/>
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_report_24dp"
            android:title="@string/report"/>
        <item
            android:id="@+id/nav_check_update"
            android:icon="@drawable/ic_update_24dp"
            android:title="@string/check_for_update"/>


</menu>
